# image-scrapper-py

./: .gitignore  README.md  pyproject.toml
src/image_scrapper/: __init__.py
src/image_scrapper/api/: __init__.py  api_base.py  api_gallery.py
src/image_scrapper/api_base/: api_base.py
src/image_scrapper/constants/: paths.py
src/image_scrapper/helpers/: helpers.py
src/image_scrapper/modules/: __init__.py  deviantart.py  kemono.py  pixiv.py
src/image_scrapper/modules/gallery_modules/: __init__.py  imhentai.py
src/image_scrapper/modules/single_modules/: __init__.py  deviantart.py  e-hentai.py  kemono.py  pixiv.py
src/image_scrapper/modules/single_modules/deviantart/: __init__.py  main_api.py  stash.py
